feat(the-icon): 实现TheIcon组件

--- a/src/assets/tesla/tesla-font.scss
+++ b/src/assets/tesla/tesla-font.scss
@@ -2,6 +2,7 @@
   @apply font-tesla;
   @apply text-12px text-#8e8e8e fw-400 lh-26px;
   letter-spacing: 1.8px;
+  font-style: normal;
 }
 .font-tesla {
   font-family: "Universal Sans Text", -apple-system, Arial, sans-serif, 'Universal Sans Display Trial';   
